# variadics

./: Cargo.toml
variadics/: Cargo.toml
variadics/src/: lib.rs
variadics/tests/: test_variadic.rs  test_variadic_extend.rs  test_variadic_fn.rs  test_variadic_manual.rs  test_variadic_ref.rs  test_variadic_trait.rs
variadics_macros/: Cargo.toml
variadics_macros/src/: lib.rs  variadic.rs  variadic2.rs  variadic_fn.rs  variadic_trait.rs
