[package]
name = "variadics"
version = "0.0.0"
edition = "2021"
authors = ["Mingwei Samuel <mingwei.samuel@gmail.com>"]
repository = "https://github.com/MingweiSamuel/variadics"
description = "Variadic generics (WIP)"
readme = "..README.md"
license = "MIT"
keywords = []
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
variadics_macros = { path = "../variadics_macros" }
sealed = "0.3"
