[package]
name = "variadics"
version = "0.0.0"
edition = "2021"
authors = ["Mingwei Samuel <mingwei.samuel@gmail.com>"]
repository = "https://github.com/MingweiSamuel/variadics"
description = "Variadic generics (WIP)"
readme = "..README.md"
license = "MIT"
keywords = []
categories = []

[features]
# Allows spread syntax outside of the last position: `v!(a, ...bs, ...cs, d, ..es)`.
complex-spread-syntax = [ "variadics_macros/complex-spread-syntax" ]

[dependencies]
variadics_macros = { path = "../variadics_macros" }
sealed = "0.3"
