[package]
name = "variadics_macros"
version = "0.0.0"
edition = "2021"
authors = ["Mingwei Samuel <mingwei.samuel@gmail.com>"]
repository = "https://github.com/MingweiSamuel/variadics"
description = "Variadic generics (WIP)"
readme = "..README.md"
license = "MIT"
keywords = []
categories = []

[lib]
proc-macro = true

[features]
complex-spread-syntax = []

[dependencies]
itertools = "0.10"
proc-macro2 = "1.0"
proc-macro-crate = "1.1"
quote = "1.0"
syn = { version = "1.0", features = [ "full", "extra-traits", "fold" ] }
